--- a/src/App.scss
+++ b/src/App.scss
@@ -1,59 +1,110 @@
+$background-color: #e5e5e5;
+$navbar-color: #ecc04f;
+$beat-player-background: #fff;
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #efefef;
-  margin: 1rem;
+  background-color: $background-color;
+  // margin: 1rem;
 }
 .navbar {
   display: flex;
   padding: 0.5rem;
   align-items: center;
   justify-content: space-between;
+  background-color: $navbar-color;
 
   .file-name {
     margin: 1rem;
-    // min-width: 10rem;
     flex-grow: 1;
+    padding: 0.25rem;
+    border: 1px solid black;
+    border-radius: 2px;
+    height: 2rem;
+    font-size: 1rem;
   }
   .navbar-nav {
     flex-grow: 3;
   }
 
   .nav-list {
+    margin-left: 2rem;
     display: flex;
     list-style: none;
-    justify-content: space-around;
+    // justify-content: space-around;
     align-items: center;
     flex-grow: 1;
+    .nav-item {
+      font-size: 1.25rem;
+      padding: 1rem;
+      margin: 0.5rem 2rem;
+    }
   }
 }
+.player-interface {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .beat-grid-container {
+    max-width: 100vw;
+    background-color: $beat-player-background;
 
-table {
-  border-collapse: collapse;
-  td {
-    width: 2rem;
-    border: 2px solid black;
-    height: 2rem;
-    margin: 0;
-  }
-  & tr td:first-child {
-    min-width: 5rem;
-    border: none;
-  }
-}
-.beat-active {
-  background-color: blue;
-}
-.beat-inactive {
-  background-color: red;
-}
+    padding: 3rem;
+    margin: 2rem auto;
+    overflow-x: scroll;
+    table {
+      // margin: 12rem;
+      width: 90vw;
+      // overflow: scroll;
+      border-collapse: collapse;
+      font-size: 1.5rem;
 
-.player-controls {
-  input,
-  button {
-    margin: 1rem;
+      td {
+        min-width: 2rem;
+        border: 2px solid black;
+        min-height: 2rem;
+        margin: 0;
+        text-transform: capitalize;
+        padding: 0.5rem;
+      }
+      & tr td:first-child {
+        min-width: 5rem;
+        border: none;
+      }
+      .active {
+        background-color: rgb(255, 217, 0);
+      }
+    }
+    .beat-active {
+      background-color: #00ff38;
+    }
+    .beat-inactive {
+      background-color: red;
+    }
+  }
+  .player-controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    input {
+      margin: 1rem;
+      width: 5rem;
+      font-size: 1.5rem;
+      padding: 0.5rem;
+      border: 1px solid black;
+      border-radius: 4px;
+    }
+    button {
+      height: 4rem;
+      width: 4rem;
+      background-color: #7a92cf;
+      border: 2px solid black;
+      border-radius: 4px;
+    }
   }
 }
